# HHDataCollector

./: .gitignore  README.md  db_manager.py  headhunter_api.py  main.py  pyproject.toml  queries.sql
db_utils/: config.py  database.ini  utils.py
